<resources>
    <string name="app_name">DevFest</string>

    <!-- Nav drawer -->
    <string name="drawer_item_my_schedule">My Schedule</string>
    <string name="drawer_item_sessions">Sessions</string>
    <string name="drawer_item_speakers">Speakers</string>
    <string name="drawer_item_map">Map</string>
    <string name="drawer_item_login">Login</string>
    <string name="drawer_item_logout">Log out</string>

    <!-- User Schedule -->
    <string name="empty_schedule">You don\'t have any events on your schedule</string>
    <string name="empty_schedule_content_description">user schedule icon</string>
    <string name="go_to_sessions_list">Go to Sessions List</string>
    <string name="user_schedule_title">Your Schedule</string>

    <!-- Sessions -->
    <string name="sessions_title">Sessions</string>
    <string name="sessions_menu_filter">Filter</string>
    <string name="sessions_menu_autohide">Hide finished</string>
    <string name="session_removed_notification">Session removed from your schedule</string>
    <string name="session_added_notification">Session added to your schedule</string>
    <string name="toggle_in_or_out_of_your_schedule">toggle in or out of your schedule</string>

    <!-- Speakers -->
    <string name="speaker_heading_plural">Speakers:</string>
    <string name="speaker_heading_singular">Speaker:</string>
    <string name="start_to_end_time">%1$s - %2$s</string>
    <string name="speaker_title">Speakers</string>
    <string name="twitter_description">Twitter button</string>
    <string name="website_description">Website button</string>

    <!-- Map -->
    <string name="map_title">Map</string>
    <string name="floor_selection_button_text">"Floor %d"</string>


    <!-- Session rating -->
    <string name="session_rating_label_text">Session rating:</string>
    <string name="default_session_feedback_rating_bar_content_description">Session rating bar with a minimum of one star and a maximum of five stars</string>
    <string name="session_feedback_content">The content:</string>
    <string name="session_feedback_rel">Pertinent</string>
    <string name="session_feedback_notrel">Not Pertinent</string>
    <string name="session_feedback_title_rate">Rate</string>
    <string name="session_feedback_advanced">Too advanced</string>
    <string name="session_feedback_basic">Too basic</string>
    <string name="session_feedback_content_label_text">Based on the description/my expectations, the content was:</string>
    <string name="session_feedback_notification_text">Provide feedback for %1$s</string>
    <string name="session_feedback_notification_ticker">Provide session feedback</string>
    <string name="session_feedback_not_so_awesome">Not so awesome</string>
    <string name="session_feedback_awesome">Awesome</string>
    <string name="session_feedback_not_at_all_relevant">Not at all</string>
    <string name="session_feedback_extremely_relevant">Extremely</string>
    <string name="session_feedback_other">Anything else we should know?</string>
    <string name="session_feedback_additional_comments_no_personal_info">Please don\'t add any personal information in your comments</string>
    <string name="session_feedback_outstanding">Outstanding</string>
    <string name="session_feedback_poor">Poor</string>
    <string name="session_feedback_relevance">How relevant was this session to your projects?</string>
    <string name="session_feedback_speaker_quality">Speaker quality:</string>
    <string name="session_feedback_submitlink">Submit Feedback</string>
    <string name="session_rating_fullname">Your Full Name:</string>

    <!-- TODO remove lorem ipsum -->
    <!-- Placeholder text -->
    <string name="body_copy_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

</resources>
