<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_white_24dp"
            android:title="@string/drawer_item_my_schedule" />
        <item
            android:id="@+id/nav_sessions"
            android:icon="@drawable/ic_list_white_24dp"
            android:title="@string/drawer_item_sessions" />
        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/ic_group_white_24dp"
            android:title="@string/drawer_item_speakers" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_white_24dp"
            android:title="@string/drawer_item_map" />
    </group>

</menu>