<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/field_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingStart="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_normal"
        android:paddingTop="@dimen/spacing_normal"
        android:paddingBottom="@dimen/spacing_normal"
        android:minHeight="?android:listPreferredItemHeightSmall"
        android:gravity="center_vertical"
        android:textAlignment="viewStart"
        tools:text="@string/session_feedback_relevance"
        style="@style/TextAppearance.AppCompat.Body2" />

    <mn.devfest.view.NumberRatingBar
        android:id="@+id/rating_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:listPreferredItemHeightSmall"
        android:maxHeight="?android:listPreferredItemHeightSmall"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_normal"
        style="@style/FeedbackNumberRatingBar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingStart="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_normal"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/padding_normal">

        <TextView
            android:id="@+id/rating_0_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|left"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.DevFest.FeedbackRatingCaption"
            tools:text="@string/session_feedback_not_at_all_relevant" />

        <TextView
            android:id="@+id/rating_5_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|right"
            android:textAppearance="@style/TextAppearance.DevFest.FeedbackRatingCaption"
            android:textColor="@color/colorPrimary"
            tools:text="@string/session_feedback_extremely_relevant" />

    </FrameLayout>

</merge>